--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@
     padding: 0;
 }
 
-body { 
+body {
     font-family: 'Fira Sans', sans-serif;
     line-height: 24px;
     color: #242424;
@@ -200,7 +200,7 @@ a#scrollUp:hover {
 }
 .logo{
     /*! padding: 42px 0px; */
-}   
+}
 .contact-info li{
     padding: 0px 25px;
     position: relative;
@@ -325,7 +325,22 @@ a#scrollUp:hover {
     position: absolute;
     left: 20px;
     top: 120%;
-    width: 230px;
+    width: 500px;
+    background: #242424;
+    z-index: 99;
+    padding: 10px;
+    box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
+    visibility: hidden;
+    opacity: 0;
+    transition: all .3s ease 0s;
+    -webkit-transition: all .3s ease 0s;
+    -moz-transition: all .3s ease 0s;
+}
+.mainmenu li > .drop-left{
+    position: absolute;
+    left: 0px;
+    top: 120%;
+    width: 130px;
     background: #242424;
     z-index: 99;
     padding: 10px;
@@ -628,7 +643,7 @@ a#scrollUp:hover {
 /*--------about-area start--------*/
 .about-area{
     padding: 100px 0px;
-  
+
 }
 .about-content{
     margin-top: 20px;
@@ -716,7 +731,7 @@ a#scrollUp:hover {
 /*--------spacial-area start--------*/
 .spacial-area{
     padding: 120px 0px;
-    
+
 }
 .spacial-area h2{
     font-size: 40px;
@@ -942,11 +957,11 @@ a#scrollUp:hover {
 .team-content ul{
     visibility: hidden;
     transform: scaleY(0);
-    transform-origin:bottom; 
+    transform-origin:bottom;
     -webkit-transform: scaleY(0);
-    -webkit-transform-origin:bottom; 
+    -webkit-transform-origin:bottom;
     -moz-transform: scaleY(0);
-    -moz-transform-origin:bottom; 
+    -moz-transform-origin:bottom;
     height: 0;
     transition: height .3s ease-in-out 1s;
     -webkit-transition: height .3s ease-in-out 1s;
@@ -1078,7 +1093,7 @@ a#scrollUp:hover {
 
 /*--------footer-area start --------*
 .footer-area{
-   
+
 }
 .footer-top{
     padding: 100px 0px 70px;
@@ -1396,7 +1411,7 @@ ul.menu.active {
 /*------calculate-area start ------*/
 .calculate-area{
     padding: 100px 0px;
-    
+
 }
 .calculate-wrap h2{
     font-size: 40px;
@@ -1459,7 +1474,7 @@ ul.menu.active {
 }
 .resorce-area2 .section-title h2{
     color: #fff;
-} 
+}
 .header-area2 .menu{
     border: 2px solid #fff;
 }
@@ -1470,7 +1485,7 @@ ul.menu.active {
 ==============================================*/
 
 .header-area {
-    
+
 background: #242424;
 }
 
@@ -1489,7 +1504,7 @@ background: #242424;
     height: 100%;
     content: "";
     background: #242424; */
-	
+
 	right: 0;
     top: 0;
 	position: absolute;
@@ -1498,7 +1513,7 @@ background: #242424;
       height: 0;
       border-bottom: 109px solid #242424;
       border-left: 100px solid #ffffff;
-	
+
 }
 .header-area3 .logo{
     position: relative;
@@ -1632,7 +1647,7 @@ border-width: 50px;
 .service-area2 .service-items:before{
     width: 100%;
     height: 100%;
-    
+
     z-index: -9;
     opacity: 0;
 }
@@ -1755,7 +1770,7 @@ border-width: 50px;
 
 .testmonial-area2{
     padding: 100px 0;
-    
+
 }
 .test-images{
     width: 60px;
@@ -1817,7 +1832,7 @@ border-width: 50px;
 
 .quote-area{
     padding: 100px 0px;
- 
+
 }
 .quote-wrap h2{
     color: #fff;
@@ -1864,7 +1879,7 @@ border-width: 50px;
 /*---------breadcumb-area start---------*/
 .breadcumb-area{
     min-height: 320px;
-  
+
 }
 .breadcumb-area h2{
     font-size: 40px;
@@ -1896,10 +1911,10 @@ border-width: 50px;
 .service-wrappper {
     margin-bottom: 30px;
     background: #fff;
-    box-shadow: 0px 1px 5px rgba(0,0,0,.1); 
+    box-shadow: 0px 1px 5px rgba(0,0,0,.1);
 }
 .service-wrappper:hover{
-    box-shadow: 0px 1px 25px rgba(0,0,0,.1); 
+    box-shadow: 0px 1px 25px rgba(0,0,0,.1);
 }
 .service-contents{
     padding: 25px 30px;
@@ -1916,7 +1931,7 @@ border-width: 50px;
     background: #fff;
     padding: 25px;
     box-shadow: 0px 0px 20px rgba(0,0,0,.1);
-    margin-bottom: 30px;    
+    margin-bottom: 30px;
 }
 .service-details h3{
     font-size: 24px;
@@ -1941,7 +1956,7 @@ border-width: 50px;
     top:0;
 }
 .service-details-img{
-    
+
     height: 100%;
 }
 
@@ -1985,7 +2000,7 @@ border-width: 50px;
 }
 .shop-wrap:hover .shop-img ul{
     left: 2px;
-} 
+}
 .shop-img ul li{
     padding: 5px 0px;
     border-bottom: 1px solid #fff;
@@ -2617,17 +2632,17 @@ padding-right: 10px;
 
 /*------------- New style -----------------*/
 
-/*-- gallery --*/ 
+/*-- gallery --*/
 .gallery-grids img {
     width: 100%;
 }
-.gallery-grids { 
+.gallery-grids {
 /*	padding: 0;*/
 }
 /*-- gallery-hover effect --*/
 .w3ls-hover {
 	background-color: #FFF;
-	display: block; 
+	display: block;
 	overflow: hidden;
 	position: relative;
 	-webkit-transition: all 0.5s;
@@ -2637,14 +2652,14 @@ padding-right: 10px;
 	transition: all 0.5s;
 	text-align: center;
 }
-.w3ls-hover img {  
+.w3ls-hover img {
 	-webkit-transition: all 0.5s;
 	-moz-transition: all 0.5s;
 	-ms-transition: all 0.5s;
 	-o-transition: all 0.5s;
 	transition: all 0.5s;
-} 
-.w3ls-hover .view-caption { 
+}
+.w3ls-hover .view-caption {
     padding: 8em 0;
     position: absolute;
     left: 0;
@@ -2663,7 +2678,7 @@ padding-right: 10px;
     -o-transition: all 0.5s;
     transition: all 0.5s;
 	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%; 
+	-moz-border-radius: 50%;
 	border-radius: 50%;
 }
 .w3ls-hover .view-caption h5{
@@ -2671,7 +2686,7 @@ padding-right: 10px;
 	font-size: 2.2em;
 	font-weight: normal;
 	margin-bottom: 15px;
-	margin-top: 5px; 
+	margin-top: 5px;
 }
 .w3ls-hover .view-caption span {
     color: #fff;
@@ -2681,7 +2696,7 @@ padding-right: 10px;
     border: 2px solid #fff;
     padding: 12px;
 }
-.w3ls-hover:hover .view-caption { 
+.w3ls-hover:hover .view-caption {
 	background-color: rgba(0, 0, 0, 0.8);
 	-webkit-transform: scale(1);
     -moz-transform: scale(1);
@@ -2689,7 +2704,7 @@ padding-right: 10px;
     -ms-transform: scale(1);
     transform: scale(1);
 	-webkit-border-radius: 0;
-	-moz-border-radius: 0; 
+	-moz-border-radius: 0;
 	border-radius: 0;
 }
 .w3ls-hover .view-caption span:hover {
@@ -2706,26 +2721,26 @@ div#gallery {
 
   /*--- START PROJECT DESIGN  ----*/
 #project_section{
-	background-image: url(../images/bg-1.jpg); 
-	background-size:cover; 
+	background-image: url(../images/bg-1.jpg);
+	background-size:cover;
 	background-position: center center;
 	background-attachment: fixed;
-	padding:2em 0;
+	/* padding:2em 0; */
 	height: 320px;
-	
+
 }
 
 .project {
 /* background-color: #039be5; */
 /* padding: 40px; */
-padding: 40px;
+padding: 20px;
 }
 .project h2, .infra h2  {
     color: #fff;
     /*! font-weight: 600; */
 /*! text-transform: uppercase; */
     text-shadow: 1px 1px 2px black;
-    margin-top: 24px;
+    margin-top: 31px;
     line-height: 49px;
 }
 .project p {
@@ -2979,7 +2994,7 @@ footer .color-part {
     -o-transform: skew(-20deg);
 }
 footer .block-content {
-    
+
     background-size: auto auto;
     background-size: cover;
 }
@@ -3036,7 +3051,7 @@ footer .copy3 {
 	padding: 10px 0;
 }
 footer p {
-    font-size: 17px;   
+    font-size: 17px;
     line-height: 32px;
 }
 footer h4 {
@@ -3071,11 +3086,11 @@ footer h4::after {
     height: 2px;
     background: #1f4d95;
     margin: 8px 0 20px;
-  
+
 }
 .contactdetails ul li {
-    list-style-type: none;    
-    font-size: 15px;    
+    list-style-type: none;
+    font-size: 15px;
     border-bottom: 1px dotted #fff;
     padding: 6px 0 3px 0;
     text-align: justify;
@@ -3098,7 +3113,7 @@ footer .heading3{
 .footer-section {
 	padding: 1em 0;
 	 background: #373737;
-	
+
 }
 .footer-grid p, p.sub {
 	font-size: 1em;
@@ -3218,8 +3233,8 @@ padding-right: 20px;
     padding: 50px 50px;
     height: 250px;
     text-align: center;
-	
-	
+
+
 }
 .inner2 h4, .inner-sub h4, .w3-significant h4 {
     color: #f80505;
@@ -3254,35 +3269,35 @@ a.link-w3l1.color-2:hover {
 .inner2 ul{
 		padding: 0 6em;
 		text-align: left;
-	}	
-	
+	}
+
 	.inner2 ul li{
 		line-height: 34px;
 		 font-size: 16px;
 
-	}	
-	
+	}
+
 	.inner2 ul li .fa{
 		font-size: 20px;
 		width: 35px;
 		margin-right: 10px;
 		vertical-align: middle;
-	}	
+	}
 
 @media(min-width:641px) {
     .sub-w3l {
         display: flex;
         display: -webkit-box;
     }
-	
+
 	.inner-sub {
     flex: 1;
     -webkit-box-flex: 1;
     flex-basis: 50%;
     -webkit-flex-basis: 50%;
 }
-	
-	
+
+
 
   /*  .inner2 {
         flex: 1;
@@ -3314,7 +3329,7 @@ a.link-w3l1.color-2:hover {
     box-shadow: 0px 3px 4px #828080;
     padding: 10px;
     margin-bottom: 1em;
-     border-bottom: 3px solid #ff8040; 
+     border-bottom: 3px solid #ff8040;
     box-shadow: 0px 1px 7px #a7a5a5;
 /*    border-top: 3px solid #ff8040;*/
 }
@@ -3516,7 +3531,7 @@ padding:3em 0 0;
 }
 
 @media (max-width: 576px) {
- 
+
   .apartment_part .single_appartment_content .list-unstyled li {
     margin-right: 14px;
   }
@@ -3567,7 +3582,7 @@ padding:3em 0 0;
 }
 
 @media (max-width: 576px) {
- 
+
   .apartment_part .single_appartment_part {
     margin-bottom: 25px;
   }
@@ -3631,7 +3646,7 @@ text-align:justify;
     float: left;
     width: 100%;
 /*	margin-bottom:2em;*/
-	
+
 }
 
 .product-data-wrapper .title {
@@ -3662,7 +3677,7 @@ font-weight: 700;
 	background-position: center;
 	height: 150px;
     padding: 4em 0;
-	margin-top: 10px;
+	/* margin-top: 10px; */
 }
 /*.breadcrumbs::before {
 	content: "";
@@ -3734,8 +3749,8 @@ font-weight: 700;
     -webkit-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15);
     -moz-box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15);
     box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.15);
-	margin-bottom: -1em;
-margin-top: 3em;
+	margin-bottom: 1em;
+margin-top: 2.3em;
 /*	margin-bottom: 3em;*/
 }
 .white-bg {
@@ -3803,7 +3818,7 @@ address-left {
     font-size: 15px;
 	line-height: 23px;
 	text-align: left;
-	
+
 }
 
 .comp-name {
@@ -3845,7 +3860,7 @@ p.w3sitemap-title {
     color: #25316d;
     font-weight: bold;
     border-bottom: 1px solid #e8e8e8;
-     padding-bottom: 0.5em; 
+     padding-bottom: 0.5em;
 }
 .sitemapbox {
     margin-top: 1em;
@@ -3853,12 +3868,12 @@ p.w3sitemap-title {
 
 .sitemap-text-grids a{
 color:#000;
-}	
+}
 
 .sitemap-tabs ul li
 {
  display: inline-block;
-    width: 100%; 
+    width: 100%;
     font-size: 1em;
 	-webkit-transition:.5s all;
 	-moz-transition:.5s all;
@@ -3879,7 +3894,7 @@ color:#000;
 }
 .sitemap-tabs ul li a:hover i.fa{
 	color:#ff7700;
-} 
+}
 
 .sitemap-tabs ul li a .fa{
 	margin-right: 15px;
@@ -3921,55 +3936,55 @@ padding: 8px 12px;
 
 /*=============== Responsive Media Query =================*/
 @media only screen and (min-device-width : 320px) and (max-device-width : 767px) {
-	
+
 	.header-area2 .menu {
     border: 2px solid #fff;
     margin: 30px 0;
 }
-	
+
 .metismenu {
     float: left;
     width: 100%;
     text-align: center;
-}	
-	
+}
+
 .metismenu li a {
     color: #000;
 	padding: 10px 0;
 	transition: 0.6s ease-in-out;
 	}
-	
+
 .metismenu li a:hover {
     color: #fff;
-	
+
 	}
-	
-	
-	
+
+
+
 .metismenu li {
     margin-bottom: 5px;
     border-bottom: 1px solid #5b5a5a;
 }
-	
+
 	.responsive-menu-area{
 		padding: 0;
-	}	
-	
+	}
+
 	.breadcrumbs{
 		height: 90px;
 padding: 2em 0;
-	}	
-	
+	}
+
 	.breadcrumbs h2{
 		font-size: 21px;
-	}	
-	
+	}
+
 	.breadcrumbs ul li a {
  font-size: 15px;
 	}
-	
+
 	#wowslider-container1{
-		z-index: 1 !important;
+		z-index: -10 !important;
 	}
 	#project_section{
 		height: auto;
@@ -3983,7 +3998,7 @@ padding: 2em 0;
     margin-bottom: 2em;
 		font-size: 20px;
 }
-	
+
 	footer .color-part{
 		left: 0;
 		width: 100%;
@@ -3992,7 +4007,7 @@ margin-left: 0;
 -moz-transform: skew(-90deg);
 -o-transform: skew(-90deg);
 	}
-	
+
 	.contactdetails  {
    color: #fd7600;;
 	}
@@ -4002,103 +4017,103 @@ margin-left: 0;
 	footer {
 /*    background: #575656;*/
 }
-	
+
 	.listnew li a {
     color: #f9f6f6;
     font-size: 15px;
 }
-	
+
 /*--------About us----------*/
 .wthree-about-bot-grid {
     float: left;
     width: 100%;
-}	
+}
 .grid1-agile.agile-new1{
-	background-size: 0% 100%;	
-}	
+	background-size: 0% 100%;
+}
 .grid1-agile{
 		padding: 0;
 	}
-	
+
 .sub-w3l {
     margin: 0 auto;
     width: 100%;
     padding: 20px;
     text-align: left;
-}	
+}
 	.inner-sub{
-	width: 100%;	
-	}	
+	width: 100%;
+	}
 .about-manufacture {
     float: left;
     width: 100%;
 }
-	
+
 .inner2 h4, .inner-sub h4, .w3-significant h4{
 		font-size: 22px;
 	margin-bottom: 10px;
 	margin-top: 1em;
-	}	
+	}
 .inner2{
 	width: 100%;
 margin-right: 5em;
 margin-top: 2em;
 padding:0;
 height: auto;
-text-align: center;	
+text-align: center;
 	background: transparent;
-	}	
-	
+	}
+
 .inner2 ul {
     padding: 0 2em;
     text-align: left;
 }
 	.w3-significant p{
 		text-align: justify;
-	}	
-	
-	
+	}
+
+
 /*-------- ./ About us----------*/
-	
+
 .apartment_part {
     padding-top: 0px;
-}	
-	
+}
+
 	.product-data-wrapper .main-heading{
 		padding: 0 10px;
-	}	
-	
+	}
+
 	.product-data-wrapper p{
 		padding: 0 10px;
 	}
 	.product-data-wrapper .title{
 		padding: 0 10px;
-	}	
-	
+	}
+
 	.product-data-wrapper .main-heading {
     font-size: 22px;
 		line-height: 25px;
 	}
-	
+
 	.address-row span.fa{
 		margin-bottom: 10px;
 	}
-	
+
 	.iq-pall-60 {
     padding: 20px 0 !important;
 }
 	.comp-name{
 		text-align: center;
-	}	
+	}
 	.address-row {
     margin-top: 20px;
 }
-	
+
 #FeedbackForm {
     width: 100%;
     padding: 0 20px;
 }
-	
+
 #FeedbackForm .buttonWrapper {
     width: 100% !important;
     margin: auto;
@@ -4107,8 +4122,8 @@ text-align: center;
 	#FeedbackForm .formButton{
 		background-color: #f70 !important;
 		font-size: 15px !important;
-	}	
-	
+	}
+
 }
 
 /*===============./ Responsive Media Query =================*/
@@ -4147,7 +4162,7 @@ text-align: center;
 
 .m2 {
     font-family: 'Fira Sans', sans-serif;
-    line-height: 22px;   
+    line-height: 22px;
     font-size: 16px;
     font-weight: 400;
 }
@@ -4174,9 +4189,9 @@ list-style-type: square;
 
 
 .theme-btn {
-    display: inline-block;   
+    display: inline-block;
     -webkit-transition: all 0.3s ease;
-    -
+
 }
 
 
@@ -4213,7 +4228,7 @@ list-style-type: square;
 }
 .sitemap-tabs ul li {
     display: inline-block;
-    width: 12%; 
+    width: 12%;
     margin: 0.5em;
     text-align: center;
     font-size: 1em;
@@ -4242,7 +4257,7 @@ background-color: #f65e13;
 }
 .sitemap-tabs ul li a:hover i.fa{
   color:#e2e2e2;
-}  
+}
 .sitemap-tabs.scroll-to-fixed-fixed {
     background: #fff;
 }
@@ -4252,7 +4267,7 @@ background-color: #f65e13;
 .sitemap-text-grids ul{margin-top: 10px;
 }
 .sitemap-text-grids ul li a{
-  
+
   line-height: 34px;
 color: #000;
 /*font-size: 1.3em;*/
@@ -4261,33 +4276,33 @@ color: #000;
 margin: 0 auto;}
 
 p.w3sitemap-title {
-   
+
   font-size: 19px;
 color: #079fde;
  /*   border-bottom: 1px solid #e8e8e8;*/
     padding-bottom: 0.5em;
 }
 p.w3sitemap-title a {
-   
+
  font-size: 19px;
 color: #f64c39;
 
     padding-bottom: 0.5em;
 }
 @media(min-width:300px) and (max-width:470px){
-  .sitemap-tabs ul li { 
+  .sitemap-tabs ul li {
   width: 42%;
-    margin: 0.3em; 
+    margin: 0.3em;
 }
-.sitemap-tabs ul li a { 
-    padding: 0.5em 0;  
+.sitemap-tabs ul li a {
+    padding: 0.5em 0;
 }
-.sitemap-tabs ul li a i.fa { 
+.sitemap-tabs ul li a i.fa {
 /*  font-size: 1.1em;*/
     margin-right: .2em;
 }
 .sitemap-tabs.affix ul li {
-    font-size: 0.9em; 
+    font-size: 0.9em;
     width: 30%;
 }
 .sitemap-text-grids {
@@ -4298,19 +4313,19 @@ color: #f64c39;
 }
 
 @media(min-width:470px) and (max-width:720px){
-  .sitemap-tabs ul li { 
+  .sitemap-tabs ul li {
   width: 30%;
-    margin: 0.3em; 
+    margin: 0.3em;
 }
-.sitemap-tabs ul li a { 
-    padding: 0.5em 0;  
+.sitemap-tabs ul li a {
+    padding: 0.5em 0;
 }
-.sitemap-tabs ul li a i.fa { 
+.sitemap-tabs ul li a i.fa {
   /*font-size: 1.1em;*/
     margin-right: .2em;
 }
 .sitemap-tabs.affix ul li {
-    font-size: 0.9em; 
+    font-size: 0.9em;
     width: 30%;
 }
 .sitemap-text-grids {
@@ -4324,19 +4339,19 @@ color: #f64c39;
 }
 
 @media(min-width:720px) and (max-width:991px){
-  .sitemap-tabs ul li { 
+  .sitemap-tabs ul li {
   width: 23%;
-    margin: 0.3em; 
+    margin: 0.3em;
 }
-.sitemap-tabs ul li a { 
-    padding: 0.5em 0;  
+.sitemap-tabs ul li a {
+    padding: 0.5em 0;
 }
-.sitemap-tabs ul li a i.fa { 
+.sitemap-tabs ul li a i.fa {
   font-size: 1.1em;
     margin-right: .2em;
 }
 .sitemap-tabs.affix ul li {
-    font-size: 0.9em; 
+    font-size: 0.9em;
     width: 18%;
 }
 .sitemap-text-grids {
@@ -4344,10 +4359,10 @@ color: #f64c39;
     /*width: 25%;*/
 }
 }
-  
+
 @media(min-width:991px) and (max-width:1200px){
-  .sitemap-tabs ul li { 
-    font-size: 1em; 
+  .sitemap-tabs ul li {
+    font-size: 1em;
   }}
 .sitemap-text-grids ul li
 {
@@ -4392,19 +4407,14 @@ border-left: 100px solid transparent;
 }
 
 #wowslider-container1 {
-  
     position: relative;
- 
     margin: 9px auto 9px;
     z-index: 0;
- 
     text-align: left;
 }
 
 }
 
-
-}
 
 
 
@@ -4415,14 +4425,4 @@ box-shadow: 0 8px 17px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19) !important;
 
 .rounded-circle {
     border-radius: 5% !important;
-}
-
-.read_more_btn{
-    width: 100px;
-    color: black;
-    margin: 0 auto;
-    display: block;
-    padding: 2px;
-    border-radius: 7px;
-    background-color: white;
 }
