--- a/engine1/style.css
+++ b/engine1/style.css
@@ -6,7 +6,7 @@
 #wowslider-container1 {
 	zoom: 1;
 	position: relative;
-	max-width:1350px;
+	/* max-width:1350px; */
 	margin:0px auto 9px;
 	z-index:0;
 	/*! border:9px solid #FFFFFF; */
