--- a/css/styles.css
+++ b/css/styles.css
@@ -4440,3 +4440,7 @@ box-shadow: 0 8px 17px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19) !important;
    cursor: default; /* Show default cursor */
    position: relative; /* Required for positioning */
   }
+
+  .title-gap{
+    margin-bottom: 25px !important;
+  }
