--- a/css/styles.css
+++ b/css/styles.css
@@ -4444,3 +4444,15 @@ box-shadow: 0 8px 17px 0 rgba(0,0,0,.2),0 6px 20px 0 rgba(0,0,0,.19) !important;
   .title-gap{
     margin-bottom: 25px !important;
   }
+
+  .fixedbutton {
+    position: fixed;
+    bottom: 20px;
+    left: 10px;
+    z-index: 99999;
+
+    img {
+        max-width: 67%;
+       
+    }
+  }
